# good-fences-rs

./: README.md  package.json
__test__/: index.spec.ts
lib/: index.d.ts  index.js
lib/__test__/: endToEnd.test.js  endToEnd.test.ts
native/: Cargo.toml
native/src/: lib.rs
sample/: tsconfig.json
